--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-
+- 龍騎兵能夠被NPC生成並具有正確的模塊血量
+- 透過ModExtension控制的龍騎兵生成(必須要有正確的框架和模塊才生成)
+- 技能使用
 
 3.7 cm M3A1 龍騎兵步槍
 一種用於重型機兵與龍騎兵的量產型栓動式步槍，使用37x223口徑砲彈
@@ -8,11 +10,3 @@
 //在原版只能打燃燒彈，在CE裝填18秒，一次裝填6發，10RPM
 
 MK-70 "龍息" 重型火焰發射器
-
-自動裝彈機(主要是降低射擊準備時間)
-
-自動迫擊砲(安了個矢車菊，但占用整個背後+肩膀槽)
-
-紅外傳感器(增加射擊精度)
-
-輔助動力包(增加負載與移動速度)
