--- a/TODO
+++ b/TODO
@@ -1,12 +1,6 @@
 - 龍騎兵能夠被NPC生成並具有正確的模塊血量
 - 透過ModExtension控制的龍騎兵生成(必須要有正確的框架和模塊才生成)
-- 技能使用
-
-3.7 cm M3A1 龍騎兵步槍
-一種用於重型機兵與龍騎兵的量產型栓動式步槍，使用37x223口徑砲彈
-
-60mm UB3 "飛龍"轉膛迫擊砲系統(由戰鬥框架與猿人裝備)
-由機兵所使用的手持式步兵迫擊砲，能夠在彈艙內預裝填六發迫擊砲彈並快速發射。
-//在原版只能打燃燒彈，在CE裝填18秒，一次裝填6發，10RPM
-
-MK-70 "龍息" 重型火焰發射器
+- 短距跳躍用的直升機背包
+- 砲塔渲染修正
+- 火焰發射器
+- 機械臂
