--- a/TODO
+++ b/TODO
@@ -1,17 +1,15 @@
-- 龍騎兵能夠被NPC生成並具有正確的模塊血量
-- 透過ModExtension控制的龍騎兵生成(必須要有正確的框架和模塊才生成)
 - 短距跳躍用的直升機背包
-- 砲塔渲染修正
 - 火焰發射器
 - 機械臂
-
-- 可以用於服裝的CompTurretGun(副砲塔)
 
 - 在組裝時如果模塊質量大於核心最大乘載量時無法裝上
 
 - 各模塊值量基準值(誤差值10KG)
-- 頭
-- 核心 80~200
-- 背包
-- 肩 20~120
-- 手
+- 頭 10~40
+- 核心 100~250
+- 背包 40~100
+- 肩 20~80
+- 手 10~80
+
+- 質重(理論最大值710，最小180)
+
