--- a/TODO
+++ b/TODO
@@ -1,15 +1,30 @@
-- 短距跳躍用的直升機背包
-- 火焰發射器
-- 機械臂
 
-- 在組裝時如果模塊質量大於核心最大乘載量時無法裝上
 
-- 各模塊值量基準值(誤差值10KG)
+- 機制: 在組裝時如果模塊質量大於核心最大乘載量時無法裝上
+
+- 機制: 機體可以半途下機並在原地產生一個可以上的空機體(但不能維修跟改裝)
+- 機制: 改裝面板可以改上色
+- 機制: 傷害吸收算法對於高穿低傷與低穿高傷傷害的計算。
+
+
+- 機制: 維護塢物品欄，能提前放進去來讓傷機時馬上攜帶特定物品。
+- 機制: 大地圖彈射
+
+- 內容: 模塊分解回收
+- 內容: 用火控組件的射擊強化模塊（左肩）
+- 內容: 煙霧/EMP發射器模塊（左肩）
+- 內容: 短距跳躍用的直升機背包（背包）
+- 內容: 彈射逃生模塊（背包）
+- 內容: 伐木電鋸模塊（左手）
+- 內容: 給占用複數槽位的大型模塊單獨一個儲存分類
+
+
+
+
+- 各模塊質量基準值(誤差值10KG)
 - 頭 10~40
 - 核心 100~250
 - 背包 40~100
 - 肩 20~80
 - 手 10~80
-
-- 質重(理論最大值710，最小180)
 
