--- a/Languages/English/DefInjected/PawnKindDef/Pawnkinds.xml
+++ b/Languages/English/DefInjected/PawnKindDef/Pawnkinds.xml
@@ -10,14 +10,14 @@
   <!-- EN: Zyklop pagoda -->
   <DMS_Squad_ArmyDragoon.label>Zyklop pagoda</DMS_Squad_ArmyDragoon.label>
   
+  <!-- EN: Zyklop Claymore -->
+  <DMS_Squad_ArmyDragoon_Claymore.label>Zyklop Claymore</DMS_Squad_ArmyDragoon_Claymore.label>
+  
   <!-- EN: Zyklop colossi -->
   <DMS_Squad_ArmyDragoon_Explosive.label>Zyklop colossi</DMS_Squad_ArmyDragoon_Explosive.label>
-
+  
   <!-- EN: Zyklop tornado -->
   <DMS_Squad_ArmyDragoon_Gatling.label>Zyklop tornado</DMS_Squad_ArmyDragoon_Gatling.label>
-  
-  <!-- EN: Zyklop claymore -->
-  <DMS_Squad_ArmyDragoon_Claymore.label>Zyklop claymore</DMS_Squad_ArmyDragoon_Claymore.label>
   
   <!-- EN: Yetta trainee -->
   <DMS_Squad_ArmyDragoon_Trainee.label>Yetta trainee</DMS_Squad_ArmyDragoon_Trainee.label>
