--- a/Languages/ChineseSimplified (简体中文)/DefInjected/PawnKindDef/Pawnkinds.xml
+++ b/Languages/ChineseSimplified (简体中文)/DefInjected/PawnKindDef/Pawnkinds.xml
@@ -20,6 +20,6 @@
   <DMS_Squad_ArmyDragoon_Gatling.label>独眼巨人 "加特林菩萨"</DMS_Squad_ArmyDragoon_Gatling.label>
   
   <!-- EN: Yetta trainee -->
-  <DMS_Squad_ArmyDragoon_Trainee.label>龙骑兵练习生</DMS_Squad_ArmyDragoon_Trainee.label>
+  <DMS_Squad_ArmyDragoon_Trainee.label>耶塔 "两年半练习生"</DMS_Squad_ArmyDragoon_Trainee.label>
   
 </LanguageData>
