--- a/Languages/ChineseSimplified (简体中文)/DefInjected/ResearchProjectDef/ResearchProject.xml
+++ b/Languages/ChineseSimplified (简体中文)/DefInjected/ResearchProjectDef/ResearchProject.xml
@@ -4,7 +4,7 @@
   <!-- EN: mobile dragoon -->
   <DMS_MobileDragoon.label>机动龙骑兵</DMS_MobileDragoon.label>
   <!-- EN: A military-duty exoskeleton technology used by colonial fleets. Due to their active colonization activities in rimworlds, these type of technology is also mastered by most former colonial worlds and some space pirates. Dragoons are generally used for armored reconnaissance missions on urban battlefields with poor road conditions, and having multiple modular mount for various needs. -->
-  <DMS_MobileDragoon.description>殖民舰队所广泛使用的重型外骨骼技术。由於他们在边缘世界的活跃殖民活动因此大多数前殖民世界和一些太空海盗也掌握了此类技术。龙骑兵一般用於在路况较差的城市战场上执行装甲侦察或在治安战任务中提供火力支援，并有多种模组化挂载以满足执行各类任务的需求。</DMS_MobileDragoon.description>
+  <DMS_MobileDragoon.description>殖民舰队所广泛使用的重型外骨骼技术。由於他们在边缘世界的活跃殖民活动因此大多数前殖民世界和一些太空海盗也掌握了此类技术。龙骑兵一般用於在路况较差的城市战场上执行装甲侦察或在治安战任务中提供火力支援，并有多种模块化挂载以满足执行各类任务的需求。</DMS_MobileDragoon.description>
   
   <!-- EN: main battle dragoon -->
   <DMS_MobileDragoonAdvanced.label>主战龙骑兵</DMS_MobileDragoonAdvanced.label>
