--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/PawnKindDef/Pawnkinds.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/PawnKindDef/Pawnkinds.xml
@@ -20,6 +20,6 @@
   <DMS_Squad_ArmyDragoon_Gatling.label>獨眼巨人 "加特林菩薩"</DMS_Squad_ArmyDragoon_Gatling.label>
   
   <!-- EN: Yetta trainee -->
-  <DMS_Squad_ArmyDragoon_Trainee.label>龍騎兵練習生</DMS_Squad_ArmyDragoon_Trainee.label>
+  <DMS_Squad_ArmyDragoon_Trainee.label>耶塔 "兩年半練習生"</DMS_Squad_ArmyDragoon_Trainee.label>
   
 </LanguageData>
