--- a/Languages/ChineseSimplified (简体中文)/Keyed/KeyedFile.xml
+++ b/Languages/ChineseSimplified (简体中文)/Keyed/KeyedFile.xml
@@ -12,7 +12,7 @@
   
   <WG_Disabled_AlreadyHasCoreFrame>{0} 已经在驾驶一个框架了。</WG_Disabled_AlreadyHasCoreFrame>
   <WG_Disabled_NoCoreFrame>龙门架没有框架。</WG_Disabled_NoCoreFrame>
-  <WG_NoModuleForSlot>此插槽无可用模组。</WG_NoModuleForSlot>
+  <WG_NoModuleForSlot>此插槽无可用模块。</WG_NoModuleForSlot>
   
   <WG_Job_TakeToMaintenanceBay>运送至维修龙门架</WG_Job_TakeToMaintenanceBay>
   <WG_Job_DisassembleFrame>拆卸被击落的框架</WG_Job_DisassembleFrame>
@@ -37,7 +37,7 @@
   <WG_Stats_DisableSlotsOf>将禁用的位置是:</WG_Stats_DisableSlotsOf>
 
   <WG_StructurePoint>框架结构值</WG_StructurePoint>
-  <WG_StructurePoint.Tooltip>框架的整体生命值。这可以吸收来袭的伤害并保护驾驶员不受伤害，但如果该值是最大点的 25%，它将有机会直接伤害驾驶员。\n\n如果点降至零，框架将被摧毁并将驾驶员困在残骸中。\n\n要恢复结构点，您需要停靠龙门架并卸载模组，然後具有制作能力的角色可以修复其生命值。</WG_StructurePoint.Tooltip>
+  <WG_StructurePoint.Tooltip>框架的整体生命值。这可以吸收来袭的伤害并保护驾驶员不受伤害，但如果该值是最大点的 25%，它将有机会直接伤害驾驶员。\n\n如果点降至零，框架将被摧毁并将驾驶员困在残骸中。\n\n要恢复结构点，您需要停靠龙门架并卸载模块，然後具有制作能力的角色可以修复其生命值。</WG_StructurePoint.Tooltip>
 
   <WG_TabMechGear>龙门架</WG_TabMechGear>
   <WG_MechSolution>订制框架</WG_MechSolution>
@@ -50,7 +50,7 @@
   <WG_ArmorDeadWeight>框架自重:</WG_ArmorDeadWeight>
   <WG_ArmorCapacity>框架有效载荷能力:</WG_ArmorCapacity>
 
-  <WG_HasMechWeapon>持有模组武器</WG_HasMechWeapon>
+  <WG_HasMechWeapon>持有模块武器</WG_HasMechWeapon>
 
   <WG_Disabled_VictimInWalkerCore>无法营救:伤员被困在一个框架里。</WG_Disabled_VictimInWalkerCore>
 
