--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Building.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Building.xml
@@ -4,6 +4,6 @@
   <!-- EN: Catapult -->
   <MF_Building_EjectorBay.label>彈射器</MF_Building_EjectorBay.label>
   <!-- EN: A special place for mecha suit storage and maintenance with auxiliary rocket, It can eject mecha suit with manipulator to far-away place. -->
-  <MF_Building_EjectorBay.description>一種用於快速部屬龍騎兵的大型彈射裝置。</MF_Building_EjectorBay.description>
+  <MF_Building_EjectorBay.description>一種用於快速部屬龍騎兵的大型電磁彈射裝置，理論上可以配合專門的龍騎兵推進器來使其具有更遠的投射距離。</MF_Building_EjectorBay.description>
   
 </LanguageData>
