--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ShoulderRight.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/ThingDef/Modules_ShoulderRight.xml
@@ -4,7 +4,7 @@
   <!-- EN: Relay Antenna -->
   <DMS_Apparel_RelayAntenna.label>中繼天線</DMS_Apparel_RelayAntenna.label>
   <!-- EN: An antenna module that expands the control range for friendly mechanics. Although the control range is relatively limited, it is enough to allow mechanics to coordinate infantry around the frame. -->
-  <DMS_Apparel_RelayAntenna.description>一種可以擴展友方機械師控制範圍的天線模塊。雖然控制範圍比較有限但足以讓機械師協調框架周圍上的機兵。</DMS_Apparel_RelayAntenna.description>
+  <DMS_Apparel_RelayAntenna.description>一種可以擴展友方機械師控制範圍的天線模組。雖然控制範圍比較有限但足以讓機械師協調框架周圍上的機兵。</DMS_Apparel_RelayAntenna.description>
   
   <!-- EN: GAU19/A Shoulder Mount -->
   <DMS_Apparel_TurretPackGAU.label>GAU19/A 肩炮</DMS_Apparel_TurretPackGAU.label>
@@ -42,20 +42,20 @@
   <!-- EN: Relay Antenna -->
   <DMS_Module_RelayAntenna.label>中繼天線</DMS_Module_RelayAntenna.label>
   <!-- EN: An antenna module that expands the control range for friendly mechanics. Although the control range is relatively limited, it is enough to allow mechanics to coordinate infantry around the frame. -->
-  <DMS_Module_RelayAntenna.description>一種可以擴展友方機械師控制範圍的天線模塊。雖然控制範圍比較有限但足以讓機械師協調框架周圍上的機兵。</DMS_Module_RelayAntenna.description>
+  <DMS_Module_RelayAntenna.description>一種可以擴展友方機械師控制範圍的天線模組。雖然控制範圍比較有限但足以讓機械師協調框架周圍上的機兵。</DMS_Module_RelayAntenna.description>
   
   <!-- EN: GAU19/A Shoulder Mount -->
-  <DMS_Module_TurretPackGAU.label>GAU19/A 肩炮模塊</DMS_Module_TurretPackGAU.label>
+  <DMS_Module_TurretPackGAU.label>GAU19/A 肩炮模組</DMS_Module_TurretPackGAU.label>
   <!-- EN: A shoulder-mounted remote-controlled machine gun. -->
   <DMS_Module_TurretPackGAU.description>一種安裝於框架肩部的遙控機槍</DMS_Module_TurretPackGAU.description>
   
   <!-- EN: Kord Shoulder Mount -->
-  <DMS_Module_TurretPackHeavy.label>獵手肩炮模塊</DMS_Module_TurretPackHeavy.label>
+  <DMS_Module_TurretPackHeavy.label>獵手肩炮模組</DMS_Module_TurretPackHeavy.label>
   <!-- EN: A shoulder-mounted remote-controlled machine gun. -->
   <DMS_Module_TurretPackHeavy.description>一種安裝於框架肩部的遙控機槍</DMS_Module_TurretPackHeavy.description>
   
   <!-- EN: LMG Shoulder Mount -->
-  <DMS_Module_TurretPackLight.label>輕機槍肩炮模塊</DMS_Module_TurretPackLight.label>
+  <DMS_Module_TurretPackLight.label>輕機槍肩炮模組</DMS_Module_TurretPackLight.label>
   <!-- EN: A shoulder-mounted remote-controlled machine gun. -->
   <DMS_Module_TurretPackLight.description>一種安裝於框架肩部的遙控機槍</DMS_Module_TurretPackLight.description>
   
