--- a/Languages/ChineseSimplified (简体中文)/DefInjected/ThingDef/ModuleWeapon.xml
+++ b/Languages/ChineseSimplified (简体中文)/DefInjected/ThingDef/ModuleWeapon.xml
@@ -15,11 +15,11 @@
   <DMS_Dragoon_LMG.tools.stock.label>枪托</DMS_Dragoon_LMG.tools.stock.label>
   <!-- EN: barrel -->
   <DMS_Dragoon_LMG.tools.barrel.label>枪管</DMS_Dragoon_LMG.tools.barrel.label>
-  <!-- EN: muzzle -->
-  <DMS_Dragoon_LMG.tools.muzzle.label>枪口</DMS_Dragoon_LMG.tools.muzzle.label>
+  <!-- EN: Dragoon LMG -->
+  <DMS_Dragoon_LMG.verbs.Verb_Shoot.label>龙骑兵轻机枪</DMS_Dragoon_LMG.verbs.Verb_Shoot.label>
   
   <!-- UNUSED -->
-  <DMS_Dragoon_LMG.verbs.Verb_Shoot.label>龙骑兵轻机枪</DMS_Dragoon_LMG.verbs.Verb_Shoot.label>
+  <DMS_Dragoon_LMG.tools.muzzle.label>枪口</DMS_Dragoon_LMG.tools.muzzle.label>
   
   <!-- EN: Dragoon Shotgun -->
   <DMS_Dragoon_Shotgun.label>龙骑兵霰弹枪</DMS_Dragoon_Shotgun.label>
@@ -28,15 +28,13 @@
   <!-- EN: stock -->
   <DMS_Dragoon_Shotgun.tools.stock.label>枪托</DMS_Dragoon_Shotgun.tools.stock.label>
   <!-- EN: barrel -->
-  <DMS_Dragoon_Shotgun.tools.barrel-0.label>枪管</DMS_Dragoon_Shotgun.tools.barrel-0.label>
-  <!-- EN: muzzle -->
-  <DMS_Dragoon_Shotgun.tools.muzzle-0.label>枪口</DMS_Dragoon_Shotgun.tools.muzzle-0.label>
-  <!-- EN: barrel -->
-  <DMS_Dragoon_Shotgun.tools.barrel-1.label>枪管</DMS_Dragoon_Shotgun.tools.barrel-1.label>
-  <!-- EN: muzzle -->
-  <DMS_Dragoon_Shotgun.tools.muzzle-1.label>枪口</DMS_Dragoon_Shotgun.tools.muzzle-1.label>
+  <DMS_Dragoon_Shotgun.tools.barrel.label>枪管</DMS_Dragoon_Shotgun.tools.barrel.label>
+  <!-- EN: Dragoon Shotgun -->
+  <DMS_Dragoon_Shotgun.verbs.Verb_Shoot.label>龙骑兵霰弹枪</DMS_Dragoon_Shotgun.verbs.Verb_Shoot.label>
   
   <!-- UNUSED -->
-  <DMS_Dragoon_Shotgun.verbs.Verb_Shoot.label>龙骑兵霰弹枪</DMS_Dragoon_Shotgun.verbs.Verb_Shoot.label>
+  <DMS_Dragoon_Shotgun.tools.muzzle-0.label>枪口</DMS_Dragoon_Shotgun.tools.muzzle-0.label>
+  <DMS_Dragoon_Shotgun.tools.barrel-1.label>枪管</DMS_Dragoon_Shotgun.tools.barrel-1.label>
+  <DMS_Dragoon_Shotgun.tools.muzzle-1.label>枪口</DMS_Dragoon_Shotgun.tools.muzzle-1.label>
   
 </LanguageData>
