--- a/Languages/ChineseTraditional (繁體中文)/DefInjected/PawnKindDef/Pawnkinds.xml
+++ b/Languages/ChineseTraditional (繁體中文)/DefInjected/PawnKindDef/Pawnkinds.xml
@@ -7,6 +7,9 @@
   <!-- EN: pirate dragoon -->
   <DMS_Dragoon_Pirate.label>雇傭龍騎兵</DMS_Dragoon_Pirate.label>
   
+  <!-- EN: Veteran -->
+  <DMS_LastPilot.label>退休老兵</DMS_LastPilot.label>
+  
   <!-- EN: Zyklop pagoda -->
   <DMS_Squad_ArmyDragoon.label>獨眼巨人 "寶塔"</DMS_Squad_ArmyDragoon.label>
   
