--- a/Languages/ChineseTraditional (繁體中文)/Keyed/KeyedFile.xml
+++ b/Languages/ChineseTraditional (繁體中文)/Keyed/KeyedFile.xml
@@ -1,63 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
-  <WG_GetIn>駕駛員</WG_GetIn>
   
-  <WG_WeaponDropped>{0} 無法握住，武器掉落。</WG_WeaponDropped>
-
-  <WG_TooBigForPilot>{0} 太大，無法駕駛此框架。</WG_TooBigForPilot>
-  <WG_TooYoungToPilot>{0} 太年輕，無法駕駛此框架。</WG_TooYoungToPilot>
-  <WG_RequirePilotSuit>{0} 沒有穿著駕駛此框架所需的駕駛服。</WG_RequirePilotSuit>
-  <WG_RequireBionic>{0} 沒有所需的仿生裝置來駕駛該框架。</WG_RequireBionic>
-  <WG_ApparelLayerTaken>{0} 拒絕脫下服裝，這阻礙了駕駛。</WG_ApparelLayerTaken>
-  
-  <WG_Disabled_AlreadyHasCoreFrame>{0} 已經在駕駛一個框架了。</WG_Disabled_AlreadyHasCoreFrame>
-  <WG_Disabled_NoCoreFrame>龍門架沒有框架。</WG_Disabled_NoCoreFrame>
-  <WG_NoModuleForSlot>此插槽無可用模組。</WG_NoModuleForSlot>
-  
-  <WG_Job_TakeToMaintenanceBay>運送至維修龍門架</WG_Job_TakeToMaintenanceBay>
-  <WG_Job_DisassembleFrame>拆卸被擊落的框架</WG_Job_DisassembleFrame>
-  <WG_Disabled_NoMaintenanceBay>無法搬運：沒有可用的維修龍門架</WG_Disabled_NoMaintenanceBay>
-
-  <WG_Disabled_NeedControlledAndDrafted>無法控制。</WG_Disabled_NeedControlledAndDrafted>
-  <WG_SafetyLock>安全鎖</WG_SafetyLock>
-  <WG_SafetyLock_Desc>安全裝置，以防止意外操作。</WG_SafetyLock_Desc>
-
-  <WG_EmergencyEject>緊急彈射</WG_EmergencyEject>
-  <WG_EmergencyEject_Desc>一種一次性逃生裝置，使用固體推進火箭將駕駛員彈射到範圍內的指定位置。框架將被摧毀。</WG_EmergencyEject_Desc>
-
-  <WG_EjectToTile>前往世界地圖</WG_EjectToTile>
+  <!-- UNUSED -->
   <WG_EjectToTile_Desc>空襲派系基地</WG_EjectToTile_Desc>
-  <WG_PilotInBuilding>駕駛員:</WG_PilotInBuilding>
-  <WG_Occupied>占用</WG_Occupied>
-  <WG_RequireMechsuit>需要駕駛框架</WG_RequireMechsuit>
-
-  <WG_PilotingFrame>駕駛助行架</WG_PilotingFrame>
-  <WG_Finalized>已完成 </WG_Finalized>
-  <WG_Stats_TakingSlotsOf>將取代的位置是:</WG_Stats_TakingSlotsOf>
-  <WG_Stats_DisableSlotsOf>將禁用的位置是:</WG_Stats_DisableSlotsOf>
-
-  <WG_StructurePoint>框架結構值</WG_StructurePoint>
-  <WG_StructurePoint.Tooltip>框架的整體生命值。這可以吸收來襲的傷害並保護駕駛員不受傷害，但如果該值是最大點的 25%，它將有機會直接傷害駕駛員。\n\n如果點降至零，框架將被摧毀並將駕駛員困在殘骸中。\n\n要恢復結構點，您需要停靠龍門架並卸載模組，然後具有製作能力的角色可以修復其生命值。</WG_StructurePoint.Tooltip>
-
-  <WG_TabMechGear>龍門架</WG_TabMechGear>
-  <WG_MechSolution>訂製框架</WG_MechSolution>
-  <WG_Overload>[注意超載]</WG_Overload>
-
-  <WG_Performance>有效載荷能力</WG_Performance>
-  <WG_OverallArmor>結構值</WG_OverallArmor>
-
-  <WG_ArmorSpeed>框架移動速度:</WG_ArmorSpeed>
-  <WG_ArmorDeadWeight>框架自重:</WG_ArmorDeadWeight>
-  <WG_ArmorCapacity>框架有效載荷能力:</WG_ArmorCapacity>
-
-  <WG_HasMechWeapon>持有模組武器</WG_HasMechWeapon>
-
-  <WG_Disabled_VictimInWalkerCore>無法營救:傷員被困在一個框架裡。</WG_Disabled_VictimInWalkerCore>
-
-  <WG_Sharp_CE>mm RHA</WG_Sharp_CE>
-  <WG_Blunt_CE>MPA</WG_Blunt_CE>
-
-  <WG_AutoRepair>自動維修</WG_AutoRepair>
-  <WG_AutoRepair_Desc>切換角色是否應自動修復此龍門架中損壞的框架。</WG_AutoRepair_Desc>
-
+  
 </LanguageData>
